# darkforest

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
darksim/: Cargo.toml
darksim/src/: event.rs  lib.rs  metrics.rs  node.rs  scenario.rs  sim.rs  topology.rs
darktree/: Cargo.toml
darktree/src/: children.rs  collections.rs  config.rs  debug.rs  dht.rs  fraud.rs  lib.rs  node.rs  routing.rs  time.rs  traits.rs  tree.rs  types.rs  wire.rs
docs/: design.md  embedded-review-findings.md  implementation-plan.md  review-findings.md  test-scenarios.md  transport-notes.md
