[workspace]
resolver = "2"
members = ["darktree", "darksim"]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT"

# Optimize release builds for speed
[profile.release]
codegen-units = 1    # Better optimization, slower compile
lto = "fat"          # Link-time optimization across all crates
panic = "abort"      # Smaller binaries, no unwinding overhead

# Default test profile: fast compile, slower runtime
[profile.test]

# Optimized test profile: slow compile, fast runtime
# Usage: cargo test --profile test-opt -p darksim test_name
[profile.test-opt]
inherits = "test"
opt-level = 3
codegen-units = 1
lto = "fat"
debug = "line-tables-only"
