[package]
name = "darksim"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Discrete-event network simulator for darktree protocol testing"

[dependencies]
darktree = { path = "../darktree", features = ["std", "debug"] }
hashbrown = { version = "0.15", features = ["default-hasher"] }
embassy-sync = "0.6"

[dev-dependencies]
