[package]
name = "darktree"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Tree-based DHT protocol for LoRa mesh networks"

[features]
default = []
std = ["critical-section/std", "hashbrown/default"]
# Enable debug events for protocol tracing (use in tests/simulations)
debug = []
# Expose internal state for testing via darksim. DO NOT enable in production builds.
test-support = []

[dependencies]
embassy-sync = "0.6"
embassy-futures = "0.1"
critical-section = "1.1"
hashbrown = { version = "0.15", default-features = false, features = ["default-hasher"] }
libm = "0.2"
siphasher = { version = "1", default-features = false }

[dev-dependencies]
rand = "0.8"
tokio = { version = "1", features = ["rt", "macros", "time"] }
critical-section = { version = "1.1", features = ["std"] }
arbtest = "0.3"
arbitrary = { version = "1", features = ["derive"] }
